--- a/estilos.css
+++ b/estilos.css
@@ -9,57 +9,129 @@ font-family: 'Raleway', sans-serif;
 	padding: 0;
 	box-sizing: border-box;
 }
+body{
+    display: flex;
+	justify-content: center;
+	align-items: center;
+    background-color: black;
+}
 body a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 body a:hover{
     text-decoration: none;
-    color: black;
-}
-/* logo y menú */
-.logo img{
-    width: 20%;
-}
-#header{
-    background-color: black;
-    font-family: 'Cinzel', serif;
-}
-.nav-link{
     color: white;
 }
-.nav-link:hover{
-    color: rgb(200, 200, 200);
+/* Contenedor para maquetado GRID*/
+.contenedor{
+    display: grid;
+	grid-template-columns: 2fr 1.6fr;
+	grid-template-rows: repeat(5, auto);
+	grid-template-areas:
+	"header header"
+	"texto imagen"
+	"titulo titulo"
+	"destacados destacados"
+	"footer footer";
+	align-content: center;
+	justify-content: center;
+	width: 1400px;
+	font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+@media all and (max-width: 768px){
+	.contenedor{
+		grid-template-columns: auto;
+		grid-template-rows: auto;
+		grid-template-areas:
+		"header"
+		"texto"
+		"imagen"
+		"titulo"
+		"destacados"
+		"footer";
+	}
+}
+/* Encabezado y menú */
+.header{
+	grid-area: header;
+	display: flex;
+	justify-content: space-between;
+	align-items: center; 
+	width: 100%;
+	font-family: 'Cinzel', serif;
+	background-color: black;
+}
+.header__nav ul{
+	display: flex;
+	align-content: center;
+	list-style: none;
+}
+@media all and (max-width: 768px){
+	.header__nav ul{
+		flex-wrap: wrap;
+	}
+}
+.header__nav ul li{
+	margin: 1rem;
+}
+.header li a{
+	text-decoration: none;
+	color: white;
+}
+.header__img{
+	width: 4em;
 }
 /* presentación */
-.hero-img{
-    padding: 5em 0em 3em 0em;
+.main{
+	grid-area: texto;
+	margin: 1rem 0rem;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: baseline;
 }
-.grande{
-    font-family: 'Cinzel', serif;
+.main__title{
+	font-family: 'Cinzel', serif;
     font-size: 40px;
-    text-shadow: black 0.1em 0.1em 0.2em
+    color: white;
+    text-shadow: rgb(255, 255, 255) 0.1em 0.1em 0.2em;
+	width: 75%;
 }
-.grande-1{
-    font-family: 'Raleway', sans-serif;
+@media all and (max-width: 768px){
+	.main__title{
+		font-size: 1.2rem;
+		margin-top: 1rem;
+	}
+}
+.main__sub{
+	font-family: 'Raleway', sans-serif;
     font-size: 25px;
-    padding-top: 1em;
     padding-bottom: 1.5em;
     padding-top: 1.5em;
 }
-.btn-mio{
-    min-width: 130px;
- 	height: 40px;
- 	padding: 5px 50px;
+@media all and (max-width: 768px){
+	.main p{
+		width: 60%;
+	}
+}
+.main__img{
+	grid-area: imagen;
+	width: 100%;
+}
+.main__btn{
+ 	padding: 20px 55px;
  	font-weight: bold;
 	cursor: pointer;
 	transition: all 0.3s ease;
 	position: relative;
 	display: inline-block;
 	outline: none;
-	border: 1px solid #37373d;
+	border: 1px solid white;
 	color: #252440;
-	background: transparent;
+	background: black;
+    color: white;
 	text-align: center;	
 	font-size: 1.3rem;
     font-family: 'Cinzel', serif;
@@ -67,11 +139,11 @@ body a:hover{
     text-decoration: none;
     text-shadow: rgb(94, 93, 93) 0.1em 0.1em 0.1em
 }
-.btn-mio:hover:after {
+.main__btn:hover:after {
 	top: 0;
 	left: 0;
 }
-.btn-mio:after {
+.main__btn:after {
 	content: "";
 	width: 100%;
 	z-index: -1;
@@ -80,33 +152,110 @@ body a:hover{
 	top: 5px;
 	left: 5px;
 	transition: 0.2s;
-	background-color: #d1d1d1;
+	background-color: #5E5629;
 }
 /* Cajas con tipos de sesiones */ 
-.caja{
-    font-family: 'Raleway', sans-serif;
-    color: #252440;
-    padding: 0em 2em 0em 2em;
+.sesiones{
+    grid-area: destacados;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: auto;
+	grid-column-gap: 40px;
+	text-align: left;
+	margin-top: 1rem;
 }
-.icon-box {
+@media all and (max-width: 768px){
+	.sesiones{
+		grid-template-columns: auto;
+	}
+}
+.title{
+    grid-area: titulo;
+	font-family: 'Cinzel', serif;
+	font-size: 2rem;
+	padding-top: 1.1rem;
+	color: white;
+    text-shadow: rgb(255, 255, 254) 0.1em 0.1em 0.2em;
+	margin-top: 1rem;
+}
+@media all and (max-width: 768px){
+	.title{
+		font-size: 1.6rem;
+	}
+}
+.title2{
+    font-family: 'Cinzel', serif;
+	font-size: 2rem; 
+}
+.sesiones__info{
     padding: 30px;
     position: relative;
     overflow: hidden;
     margin: 0;
-    background: #d1d1d1;
-    box-shadow: 0 10px 29px 0 rgba(205, 206, 207, 0.1);
+    background: #5E5629;
+    box-shadow: 0 10px 29px 0 rgb(205 206 207 / 10%);
     transition: all 0.3s ease-in-out;
     border-radius: 4px;
     text-align: center;
-    border-bottom: 3px solid #fff;
 }
-.icon-box:hover {
+.sesiones__info:hover {
     transform: translateY(-5px);
 }
-.title{
-    font-family: 'Cinzel', serif;
+/* PIE DE PÁGINA */
+.footer{
+	grid-area: footer;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 2rem;
+	padding-top: 1rem ;
+	background-color: black;
+	width: 100%;
+    color: white;
+    font-family: 'Raleway', sans-serif;
 }
-/* footer */
-#footer img{
-    width: 5em;
+@media all and (max-width: 400px){
+	.footer{
+		font-size: 12px;
+	}
+}
+.footer__redes{
+	display: grid;
+	grid-template-areas:
+	"title title title"
+	"img instagram ."
+	"img youtube ."
+	"img facebook ."
+	;
+	grid-column-gap: 10px;
+}
+.footer a{
+	text-decoration: none;
+	color: white ;
+}
+.footer__nav ul{
+	list-style: none;
+	margin-left: 1rem;
+	line-height: 1.4rem;
+}
+.footer__title{
+	grid-area: title;
+	font-weight: 800;
+	text-transform: uppercase;
+	margin-bottom: 1rem;
+	color: white;
+	margin-inline-end: 1rem;
+}
+.footer__img{
+	grid-area: img;
+	height: 75px;
+	text-align: right;
+}
+.footer__ig{
+	grid-area: instagram;
+}
+.footer__yt{
+	grid-area: youtube;
+}
+.footer__fb{
+	grid-area: facebook;
 }
