--- a/estilos.css
+++ b/estilos.css
@@ -23,6 +23,7 @@ body a:hover{
     text-decoration: none;
     color: white;
 }
+/* INDEX */
 /* Contenedor para maquetado GRID*/
 .contenedor{
     display: grid;
@@ -308,4 +309,38 @@ body a:hover{
 	.footer{
 		font-size: 12px;
 	}
+}
+/* QUIENES SOMOS */
+/* Contenedor para maquetado GRID*/
+.conteiner{
+    display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: auto;
+	grid-template-areas:
+	"header"
+	"texto"
+	"video"
+	"footer";
+	align-content: center;
+	justify-content: center;
+	width: 1400px;
+	font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+/* texto */
+.main__sub2{
+	line-height: 1em;
+	font-size: 20px;
+	padding-top: 1em;
+}
+/* videos */
+.videos{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
+	grid-row-gap: 1em;
+}
+.videos iframe{
+	border-radius: 16px;
+	background: linear-gradient(0deg, rgba(94, 86, 41, 0.5), rgba(94, 86, 41, 0.5)), url(.jpg), #D9D9D9;
 }
