--- a/estilos.css
+++ b/estilos.css
@@ -393,3 +393,37 @@ body a:hover{
 .carta:hover .back {
 	transform: rotateY(360deg);
 }
+/* CONTACTO Y RESERVAS */
+.reservas{
+	padding-top: 3em;
+}
+.sesiones1{
+    display: inline-flex;
+    grid-gap: 25rem;
+    grid-auto-flow: column;
+}
+#img_ppal{
+    width: 400px;
+    height: 650px;
+    border-radius: 16px;
+}
+.article {
+    background: linear-gradient(125deg, #cbba54 0, #5e5629 50%, #000000 100%);
+    width: 500px;
+    height: 650px;
+    font-family: 'Cinzel' , 'serif';
+    border-radius: 0.5em;
+    padding: 2em 1.5em;
+}
+.table{
+    display: grid;
+    grid-auto-columns: auto;
+	padding-bottom: 0.5em;
+}
+.form_btn {
+    font-family: 'Ralewey' , sans-serif;
+    font-size: larger;
+    background-color: #5E5629;
+	padding: 0.5em;
+	margin-top: 1em;
+}
